@@ -90,8 +90,10 @@ gperl_register_fundamental (GType gtype, const char * package)
 			                       (GDestroyNotify)g_free);
 	}
 	p = g_strdup (package);
-	g_hash_table_insert (packages_by_type, (gpointer)gtype, p);
-	g_hash_table_insert (types_by_package, p, (gpointer)gtype);
+	g_hash_table_insert (packages_by_type,
+	                     GUINT_TO_POINTER (gtype), p);
+	g_hash_table_insert (types_by_package, p,
+	                     GUINT_TO_POINTER (gtype));
 	G_UNLOCK (types_by_package);
 	G_UNLOCK (packages_by_type);
 
@@ -110,7 +112,8 @@ gperl_fundamental_type_from_package (const char * package)
 {
 	GType res;
 	G_LOCK (types_by_package);
-	res = (GType) g_hash_table_lookup (types_by_package, package);
+	res = (GType) GPOINTER_TO_UINT
+			(g_hash_table_lookup (types_by_package, package));
 	G_UNLOCK (types_by_package);
 	return res;
 }
@@ -127,7 +130,8 @@ gperl_fundamental_package_from_type (GType gtype)
 	const char * res;
 	G_LOCK (packages_by_type);
 	res = (const char *)
-		g_hash_table_lookup (packages_by_type, (gpointer)gtype);
+		g_hash_table_lookup (packages_by_type,
+		                     GUINT_TO_POINTER (gtype));
 	G_UNLOCK (packages_by_type);
 	return res;
 }
